--- a/SBA DOM/index.html
+++ b/SBA DOM/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav id="nav-id">
-      <a>About</a>
+      <a>Home</a>
       <a>Sign Up</a>
       <a>Contact</a>
     </nav>
