--- a/SBA DOM/pages/signup.html
+++ b/SBA DOM/pages/signup.html
@@ -35,7 +35,7 @@
         ><br />
         
         <label for="password">Password</label>
-        <input name="password" type="text" />
+        <input name="password" type="text" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" title="Your password must contain minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character"/>
         <span class="input-icon"><i class="fa-solid fa-key"></i></span><br />
         
         <label for="password">Password again</label>
