--- a/SBA DOM/pages/signup.html
+++ b/SBA DOM/pages/signup.html
@@ -41,8 +41,8 @@
         />
         <span class="input-icon"><i class="fa-solid fa-key"></i></span><br />
 
-        <label for="password">Password again</label>
-        <input name="passwordCheck" type="text" />
+        <label for="passwordCheck">Password again</label>
+        <input name="passwordCheck" id="passwordCheck" type="text" />
         <span class="input-icon"><i class="fa-solid fa-key"></i></span
         ><br /><br />
 
@@ -55,6 +55,7 @@
           <input type="submit" value="Register" />
         </div>
       </form>
+      <div id="errorMsg"></div>
     </main>
   </body>
 </html>
