--- a/SBA DOM/pages/signup.html
+++ b/SBA DOM/pages/signup.html
@@ -35,6 +35,7 @@
         <label for="password">Password</label>
         <input
           name="password"
+          id="password"
           type="text"
           pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
           title="Your password must contain minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character"
