--- a/ALAB Form-Validation/index.html
+++ b/ALAB Form-Validation/index.html
@@ -62,7 +62,7 @@
             ><br /><br />
   
             <div class="flex-row">
-              <input name="persist" type="checkbox" />
+              <input name="persist" type="checkbox" required />
               <label for="persist">Keep me logged in.</label>
               <input type="submit" value="Login" />
             </div>
